<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout

        style="@style/Layout_width_height"
        android:orientation="vertical">


        <ImageView
            android:contentDescription="@string/image_of_cupOfCoffee"
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="149dp"
            android:src="@drawable/coffeecup" />

            <EditText
                style="@style/Layout_width_height"
                android:id="@+id/EditText_UserName"
                android:hint="@string/name"
                android:paddingTop="16dp"
                android:paddingBottom="16dp" />

        <TextView
            style="@style/height_width_wrpcont"
            android:paddingBottom="10dp"
            android:textSize="35sp"
            android:textAllCaps="true"
            android:text="@string/Toppings"/>

        <CheckBox
            style="@style/height_width_wrpcont"
            android:id="@+id/Chocolatecheckbox"
            android:paddingStart="24sp"
            android:paddingLeft="24dp"
            android:paddingRight="24sp"
            android:paddingEnd="24sp"
            android:text="@string/Chocolate"
            android:checked="false"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            style="@style/height_width_wrpcont"
            android:id="@+id/WhippedCream_checkbox"
            android:paddingStart="24sp"
            android:paddingEnd="24sp"
            android:paddingLeft="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/WhippedCream"
            android:checked="false"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            style="@style/height_width_wrpcont"
            android:layout_marginTop="16dp"
            android:text="@string/Quantity"
            android:textAllCaps="true"
            android:textSize="36sp" />

        <LinearLayout
            style="@style/Layout_width_height"
            android:orientation="horizontal">

        <Button
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24sp"
            android:layout_marginRight="8dp"
            android:text="+"
            android:onClick="increment"
            android:textSize="20sp" />

        <TextView
            style="@style/height_width_wrpcont"
            android:id="@+id/quantity_text_view"
            android:layout_marginTop="16dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_marginTop="16dp"
            android:onClick="decrement"
            android:layout_marginStart="24sp"
            android:layout_marginLeft="8dp"
            android:text="-"
            android:textSize="20sp" />
        </LinearLayout>

        <TextView
            style="@style/height_width_wrpcont"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            style="@style/height_width_wrpcont"
            android:id="@+id/price_text_view"
            android:layout_marginTop="16dp"
            android:text="$0"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            style="@style/height_width_wrpcont"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/Order"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>